--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
-        
+    
      
         * {
             margin: 0;
@@ -40,7 +39,7 @@
             font-size: 1.2rem;
             font-weight: bold;
             color: #4a3428;
-            z-index: 1001; /* Keep logo above menu */
+            z-index: 1001; 
         }
 
         .logo-icon {
@@ -339,8 +338,8 @@
         .see-all {
             text-align: center;
             margin-top: 3rem;
-            padding-top: 2rem;  /* Add padding for extra space */
-            clear: both;  /* Clear any floats */
+            padding-top: 2rem;  
+            clear: both;  
         }   
 
         .see-all .btn {
@@ -364,6 +363,10 @@
         .visit p {
             margin-bottom: 2rem;
             opacity: 0.9;
+        }
+
+        .visit .btn {
+            font-family: 'Open Sans';
         }
 
         /* Footer */
@@ -560,7 +563,7 @@
         }
 
         .image-placeholder {
-            background: linear-gradient(135deg, #8b6f47, #c9a068);
+            background: url('https://images.unsplash.com/photo-1692296113053-76f240e5ce33?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGNvZmZlZSUyMGJlYW5zfGVufDB8fDB8fHww');
             border-radius: 20px;
             height: 500px;
             display: flex;
@@ -569,6 +572,9 @@
             position: relative;
             overflow: hidden;
             box-shadow: 0 10px 40px rgba(0,0,0,0.15);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         .coffee-beans {
@@ -981,7 +987,7 @@
             margin-bottom: 1rem;
         }
 
-        .branches-hero h1 {
+        .branches-hero h2 {
             font-family: 'Georgia', serif;
             font-size: 3.5rem;
             color: #4a3428;
@@ -995,10 +1001,10 @@
             line-height: 1.6;
         }
 
-        /* 2. The Grid Layout */
+        /*  The Grid Layout */
         .locations-section {
             padding: 3rem 2rem 5rem;
-            background: #faf8f5; /* Matches your other pages */
+            background: #faf8f5; 
         }
 
         .locations-grid {
@@ -1009,19 +1015,19 @@
             gap: 2rem;
         }
 
-        /* 3. The Card Styling (The "Pizza Box") */
+        /* The Card Styling (The "Pizza Box") */
         .branch-card {
             background: white;
             padding: 2.5rem;
             border-radius: 12px;
             box-shadow: 0 4px 20px rgba(0,0,0,0.05);
-            transition: transform 0.3s ease; /* Smooth hover lift */
+            transition: transform 0.3s ease; 
             position: relative;
             overflow: hidden;
         }
 
         .branch-card:hover {
-            transform: translateY(-5px); /* Lift up when hovered */
+            transform: translateY(-5px); 
         }
 
         .branch-card h3 {
@@ -1047,7 +1053,7 @@
 
         .branch-card.featured h3,
         .branch-card.featured .branch-info p {
-            color: white; /* Force text to white */
+            color: white; 
         }
 
         .store-tag {
@@ -1075,7 +1081,7 @@
         }
 
         .map-placeholder {
-            background: #e5d5c3; /* Darker beige map background */
+            background: #e5d5c3; 
             height: 400px;
             border-radius: 20px;
             display: flex;
@@ -1680,15 +1686,11 @@
 
 
 @media (max-width: 630px) {
-        .nav-items li a {
-            font-size: 1.2rem;
-            padding: 0.1rem 0.8rem;
-        }
+    .nav-items li a {
+        font-size: 1.2rem;
+        padding: 0.1rem 0.8rem;
     }
-    
-
-
-
+    }
 /* =====================  HAMBURGER MENU  ====================== */
 
 
@@ -1700,7 +1702,240 @@
 
 
 @media (max-width: 450px) {
-    .about-hero h1 {
-        font-size: 1rem !important;
+    /* .nav-items {
+        padding-top: 9rem;
+    } */
+
+    .hero-content .badge {
+        font-size: .7rem;
+        margin-bottom: .5rem;
     }
+
+    .hero h1 {
+        font-size: 2.4rem;
+        line-height: 1.1;
+        margin-bottom: 1rem;
+    }
+
+    .hero p {
+        font-size: .85rem;
+    }
+
+    .btn {
+        padding: .6rem 1.5rem;
+        font-size: .8rem;
+    }
+
+    .section-title h2 {
+        font-size: 2.3rem;
+    }
+
+    .section-title p {
+        font-size: .85rem;
+    }
+
+    .products-grid {
+        margin-bottom: 0;
+    }
+
+    .see-all {
+        margin-top: 0;
+    }
+
+    .visit h2 { 
+        font-size: 2.3rem;
+        margin-bottom: 1.5rem;
+    }
+
+    .visit p {
+        font-size: .85rem;
+    }
+/* =========================== HERO page =========================== */
+
+
+
+
+
+/* =========================== ABOUT page =========================== */
+    .about-content .badge {
+        font-size: .7rem;
+        margin-bottom: .5rem;
+    }
+
+    .about-content h1 {
+        font-size: 2.3rem;
+    }
+
+    .about-content p {
+        font-size: .85rem;
+        margin-bottom: 1rem;
+    }
+
+    .years-badge {
+        padding: 1rem 1.5rem;
+        font-size: 1.5rem;
+    }
+
+    .years-badge span {
+        font-size: .75rem;
+    }
+
+    .section-title h2 {
+        font-size: 2.3rem;
+    }
+
+    .section-title p {
+        font-size: .85rem;
+    }
+
+    .journey-section h2 {
+        font-size: 2.3rem;
+    }
+
+    .journey-section p {
+        font-size: .85rem;
+    }
+
+    .timeline-content h3 {
+        font-size: 1rem;
+    }
+
+    .team-section h2 {
+        font-size: 2.3rem;
+        margin-bottom: 1rem;
+    }
+
+    .team-section p {
+        font-size: .85rem;
+    }
+/* =========================== ABOUT page =========================== */
+
+
+
+
+/* =========================== PRODUCT page =========================== */
+    .products-hero .badge {
+        font-size: .7rem;
+        margin-bottom: .5rem;
+    }
+
+    .products-hero h1 {
+        font-size: 2.3rem;
+        margin-bottom: .5rem;
+    }
+
+    .products-hero p {
+        font-size: .85rem;
+    }
+
+    .category-title {
+        margin-bottom: 0rem;
+    }
+
+    .category-title h2 {
+        font-size: 1.8rem;
+    }
+/* =========================== PRODUCT page =========================== */
+
+
+
+
+/* =========================== BRANCHES page =========================== */
+    .branches-hero .badge {
+        font-size: .7rem;
+        margin-bottom: .5rem;
+    }
+
+    .branches-hero h2 {
+        font-size: 2.3rem;
+        margin-bottom: .5rem;
+    }
+
+    .branches-hero p {
+        font-size: .85rem;
+    }
+
+    .presence-section h2 {
+        font-size: 2.3rem;
+    }
+/* =========================== BRANCHES page =========================== */
+
+
+
+
+/* =========================== TESTIMONIAL page =========================== */
+    .page-header .badge {
+        font-size: .7rem;
+        margin-bottom: .5rem;
+    }
+
+    .page-header h1 {
+        font-size: 2.3rem;
+        margin-bottom: .5rem;
+    }
+
+    .page-header p {
+        font-size: .85rem;
+    }
+
+    .stat-item h2 {
+        font-size: 1.5rem;
+    }
+
+    .stat-item p {
+        font-size: .6rem;
+    }
+
+    .share-experience h2 {
+        font-size: 2.3rem;
+        margin-bottom: 1rem;
+    }
+
+    .share-experience p {
+        font-size: .85rem;
+    }
+
+    .tags .pill {
+        padding: 8px 15px;
+        font-size: .7rem;
+    }
+/* =========================== TESTIMONIAL page =========================== */
+
+
+
+
+/* =========================== CONTACT page =========================== */
+    .contact-hero .badge {
+        font-size: .7rem;
+        margin-bottom: .5rem;
+    }
+
+    .contact-hero h1 {
+        font-size: 2.3rem;
+        margin-bottom: .5rem;
+    }
+
+    .contact-hero p {
+        font-size: .85rem;
+    }
+
+    .dm-section h2 {
+        font-size: 2.3rem;
+        margin-bottom: .5rem;
+    }
+
+    .dm-section .subtitle {
+        font-size: .85rem;
+    }
+
+    .visit-section h2 {
+        font-size: 2.3rem;
+        margin-bottom: .5rem;
+    }
+
+    .visit-section p {
+        font-size: 0.85rem;
+        margin-bottom: 1rem;
+    }
+/* =========================== CONTACT page =========================== */
 }
